reactjs-frontend/reactjs-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs-frontend-deployment
  namespace: workshop
  labels:
    app: reactjs-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactjs-frontend
  template:
    metadata:
      name: reactjs-frontend
      labels:
        app: reactjs-frontend
    spec:
      containers:
        - name: reactjs-frontend
          image: devidevops447/reactjs-frontend-beta:v6666
          ports:
            - containerPort: 80
