reactjs-frontend/reactjs-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactjs-frontend-service
  namespace: workshop
spec:
  selector:
    app: reactjs-frontend
  ports:
    - protocol: TCP
      port: 3000         # <-- Exposed to Ingress
      targetPort: 3000 # <-- React app inside container
  type: ClusterIP
