reactjs-frontend/reactjs-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactjs-frontend-ingress
  namespace: workshop
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - host: reactjs-frontend.showmysite.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reactjs-frontend-service
            port:
              number: 80
